[package]
name = "few_pretty_graphs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
idek = { git = "https://github.com/Masterchef365/idek.git", rev = "d234b0f" }
dbscan = { git = "https://github.com/Masterchef365/dbscan.git", rev = "e63e5db" }
structopt = { version = "0.3", default-features = false }
